tests/ui/type-alias-impl-trait/assoc-type-lifetime-unconstrained.stderr
error[E0207]: the lifetime parameter `'a` is not constrained by the impl trait, self type, or predicates
  --> $DIR/assoc-type-lifetime-unconstrained.rs:17:6
   |
LL | impl<'a, I> UnwrapItemsExt for I {
   |      ^^ unconstrained lifetime parameter
   |
   = note: consider using lifetime parameter `'a` in the impl on `I` or otherwise constrain `'a`

error: aborting due to previous error

For more information about this error, try `rustc --explain E0207`.
